--- a/ConCommandFlag.html
+++ b/ConCommandFlag.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>ConCommandFlag</h1>
-      <p><b>Namespace:</b> <a href="Namespace.ConCommandFlag.html">ConCommandFlag</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.ConCommandFlag">ConCommandFlag</a></p>
       <p>Console command flags</p>
         <h2 id="Values">Values</h2>
         <table>
