--- a/Interfaces.html
+++ b/Interfaces.html
@@ -28,11 +28,11 @@
         	</thead>
         	<tbody>
         				<tr id='PlayerInVolumeListener'>
-        					<td><a href='PlayerInVolumeListener.html'>PlayerInVolumeListener</a></td>
+        					<td><a href='/PlayerInVolumeListener'>PlayerInVolumeListener</a></td>
         					<td>Listener for CountPlayersInBrushVolume.</td>
         				</tr>
         				<tr id='ScriptClassInterface'>
-        					<td><a href='ScriptClassInterface.html'>ScriptClassInterface</a></td>
+        					<td><a href='/ScriptClassInterface'>ScriptClassInterface</a></td>
         					<td>Script class interface</td>
         				</tr>
         	</tbody>
