--- a/MatchFlagType.html
+++ b/MatchFlagType.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>MatchFlagType</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Regex.html">Regex</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Regex">Regex</a></p>
       <p>Match format flags. These can be bitwise OR'd together to combine options.</p>
         <h2 id="Values">Values</h2>
         <table>
