--- a/Namespace.ConCommandKind.html
+++ b/Namespace.ConCommandKind.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='Type'>
         					<td><a href='/Namespace.ConCommandKind'>ConCommandKind</a></td>
-        					<td><a href='Type.html'>Type</a></td>
+        					<td><a href='/Type'>Type</a></td>
         					<td>Console command kind.</td>
         				</tr>
         	</tbody>
