--- a/Namespace.Regex.html
+++ b/Namespace.Regex.html
@@ -31,17 +31,17 @@
         	<tbody>
         				<tr id='MatchResults'>
         					<td><a href='/Namespace.Regex'>Regex</a></td>
-        					<td><a href='MatchResults.html'>MatchResults</a></td>
+        					<td><a href='/MatchResults'>MatchResults</a></td>
         					<td>Regular expression match results</td>
         				</tr>
         				<tr id='Regex'>
         					<td><a href='/Namespace.Regex'>Regex</a></td>
-        					<td><a href='Regex.html'>Regex</a></td>
+        					<td><a href='/Regex'>Regex</a></td>
         					<td>Represents a regular expression</td>
         				</tr>
         				<tr id='SubMatch'>
         					<td><a href='/Namespace.Regex'>Regex</a></td>
-        					<td><a href='SubMatch.html'>SubMatch</a></td>
+        					<td><a href='/SubMatch'>SubMatch</a></td>
         					<td>Regular expression submatch</td>
         				</tr>
         	</tbody>
@@ -57,12 +57,12 @@
         	<tbody>
         				<tr id='FlagType'>
         					<td><a href='/Namespace.Regex'>Regex</a></td>
-        					<td><a href='FlagType.html'>FlagType</a></td>
+        					<td><a href='/FlagType'>FlagType</a></td>
         					<td>Regular expression flags. These can be bitwise OR'd together to combine options.</td>
         				</tr>
         				<tr id='MatchFlagType'>
         					<td><a href='/Namespace.Regex'>Regex</a></td>
-        					<td><a href='MatchFlagType.html'>MatchFlagType</a></td>
+        					<td><a href='/MatchFlagType'>MatchFlagType</a></td>
         					<td>Match format flags. These can be bitwise OR'd together to combine options.</td>
         				</tr>
         	</tbody>
