--- a/Namespace.SeekFile.html
+++ b/Namespace.SeekFile.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='SeekFile'>
         					<td><a href='/Namespace.SeekFile'>SeekFile</a></td>
-        					<td><a href='SeekFile.html'>SeekFile</a></td>
+        					<td><a href='/SeekFile'>SeekFile</a></td>
         					<td>Mode flags passed to <a href='/File#Seek'>File::Seek</a>.</td>
         				</tr>
         	</tbody>
