--- a/Namespace.String.html
+++ b/Namespace.String.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='CompareType'>
         					<td><a href='/Namespace.String'>String</a></td>
-        					<td><a href='CompareType.html'>CompareType</a></td>
+        					<td><a href='/CompareType'>CompareType</a></td>
         					<td>Compare type.</td>
         				</tr>
         	</tbody>
