--- a/Namespaces.html
+++ b/Namespaces.html
@@ -27,46 +27,46 @@
         	</thead>
         	<tbody>
         				<tr id='ConCommandFlag'>
-        					<td><a href='Namespace.ConCommandFlag.html'>ConCommandFlag</a></td>
+        					<td><a href='/Namespace.ConCommandFlag'>ConCommandFlag</a></td>
         				</tr>
         				<tr id='ConCommandKind'>
-        					<td><a href='Namespace.ConCommandKind.html'>ConCommandKind</a></td>
+        					<td><a href='/Namespace.ConCommandKind'>ConCommandKind</a></td>
         				</tr>
         				<tr id='NetworkMessages'>
-        					<td><a href='Namespace.NetworkMessages.html'>NetworkMessages</a></td>
+        					<td><a href='/Namespace.NetworkMessages'>NetworkMessages</a></td>
         				</tr>
         				<tr id='SeekFile'>
-        					<td><a href='Namespace.SeekFile.html'>SeekFile</a></td>
+        					<td><a href='/Namespace.SeekFile'>SeekFile</a></td>
         				</tr>
         				<tr id='OpenFile'>
-        					<td><a href='Namespace.OpenFile.html'>OpenFile</a></td>
+        					<td><a href='/Namespace.OpenFile'>OpenFile</a></td>
         				</tr>
         				<tr id='Regex'>
-        					<td><a href='Namespace.Regex.html'>Regex</a></td>
+        					<td><a href='/Namespace.Regex'>Regex</a></td>
         				</tr>
         				<tr id='Reflection'>
-        					<td><a href='Namespace.Reflection.html'>Reflection</a></td>
+        					<td><a href='/Namespace.Reflection'>Reflection</a></td>
         				</tr>
         				<tr id='String'>
-        					<td><a href='Namespace.String.html'>String</a></td>
+        					<td><a href='/Namespace.String'>String</a></td>
         				</tr>
         				<tr id='FileSystem'>
-        					<td><a href='Namespace.FileSystem.html'>FileSystem</a></td>
+        					<td><a href='/Namespace.FileSystem'>FileSystem</a></td>
         				</tr>
         				<tr id='Hooks::Game'>
-        					<td><a href='Namespace.Hooks.Game.html'>Hooks::Game</a></td>
+        					<td><a href='/Namespace.Hooks.Game'>Hooks::Game</a></td>
         				</tr>
         				<tr id='Hooks::Player'>
-        					<td><a href='Namespace.Hooks.Player.html'>Hooks::Player</a></td>
+        					<td><a href='/Namespace.Hooks.Player'>Hooks::Player</a></td>
         				</tr>
         				<tr id='Hooks::PickupObject'>
-        					<td><a href='Namespace.Hooks.PickupObject.html'>Hooks::PickupObject</a></td>
+        					<td><a href='/Namespace.Hooks.PickupObject'>Hooks::PickupObject</a></td>
         				</tr>
         				<tr id='Hooks::Weapon'>
-        					<td><a href='Namespace.Hooks.Weapon.html'>Hooks::Weapon</a></td>
+        					<td><a href='/Namespace.Hooks.Weapon'>Hooks::Weapon</a></td>
         				</tr>
         				<tr id='Schedules'>
-        					<td><a href='Namespace.Schedules.html'>Schedules</a></td>
+        					<td><a href='/Namespace.Schedules'>Schedules</a></td>
         				</tr>
         	</tbody>
         </table>    </main>
