--- a/NetworkMessageType.html
+++ b/NetworkMessageType.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>NetworkMessageType</h1>
-      <p><b>Namespace:</b> <a href="Namespace.NetworkMessages.html">NetworkMessages</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.NetworkMessages">NetworkMessages</a></p>
       <p>Network message types</p>
         <h2 id="Values">Values</h2>
         <table>
