--- a/OpenFile.html
+++ b/OpenFile.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>OpenFile</h1>
-      <p><b>Namespace:</b> <a href="Namespace.OpenFile.html">OpenFile</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.OpenFile">OpenFile</a></p>
       <p>Flags passed to FileSystem::OpenFile.</p>
         <h2 id="Values">Values</h2>
         <table>
