--- a/Regex.html
+++ b/Regex.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>Regex</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Regex.html">Regex</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Regex">Regex</a></p>
       <p>Represents a regular expression</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
