--- a/Type.html
+++ b/Type.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>Type</h1>
-      <p><b>Namespace:</b> <a href="Namespace.ConCommandKind.html">ConCommandKind</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.ConCommandKind">ConCommandKind</a></p>
       <p>Console command kind.</p>
         <h2 id="Values">Values</h2>
         <table>
