--- a/ArgumentType.html
+++ b/ArgumentType.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>ArgumentType</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Which type a reflection argument is</p>
         <h2 id="Values">Values</h2>
         <table>
