--- a/Arguments.html
+++ b/Arguments.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>Arguments</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>This class can hold arguments for a function or method call.</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
