--- a/CReflection.html
+++ b/CReflection.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>CReflection</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Reflection global used for generial purpose needs.</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Properties">Properties</h2>
