--- a/CompareType.html
+++ b/CompareType.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>CompareType</h1>
-      <p><b>Namespace:</b> <a href="Namespace.String.html">String</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.String">String</a></p>
       <p>Compare type.</p>
         <h2 id="Values">Values</h2>
         <table>
