--- a/Function.html
+++ b/Function.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>Function</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Reflection function class. Can be used to call global functions.</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
