--- a/IReflectionGroup.html
+++ b/IReflectionGroup.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>IReflectionGroup</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Reflection group. Represents a group of reflectable objects.</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
