--- a/Method.html
+++ b/Method.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>Method</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Reflection method class. Can be used to call object methods.</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
