--- a/Namespace.ConCommandFlag.html
+++ b/Namespace.ConCommandFlag.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='ConCommandFlag'>
         					<td><a href='/Namespace.ConCommandFlag'>ConCommandFlag</a></td>
-        					<td><a href='ConCommandFlag.html'>ConCommandFlag</a></td>
+        					<td><a href='/ConCommandFlag'>ConCommandFlag</a></td>
         					<td>Console command flags</td>
         				</tr>
         	</tbody>
