--- a/Namespace.NetworkMessages.html
+++ b/Namespace.NetworkMessages.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='NetworkMessageType'>
         					<td><a href='/Namespace.NetworkMessages'>NetworkMessages</a></td>
-        					<td><a href='NetworkMessageType.html'>NetworkMessageType</a></td>
+        					<td><a href='/NetworkMessageType'>NetworkMessageType</a></td>
         					<td>Network message types</td>
         				</tr>
         	</tbody>
