--- a/Namespace.OpenFile.html
+++ b/Namespace.OpenFile.html
@@ -31,7 +31,7 @@
         	<tbody>
         				<tr id='OpenFile'>
         					<td><a href='/Namespace.OpenFile'>OpenFile</a></td>
-        					<td><a href='OpenFile.html'>OpenFile</a></td>
+        					<td><a href='/OpenFile'>OpenFile</a></td>
         					<td>Flags passed to FileSystem::OpenFile.</td>
         				</tr>
         	</tbody>
