--- a/Namespace.Reflection.html
+++ b/Namespace.Reflection.html
@@ -31,42 +31,42 @@
         	<tbody>
         				<tr id='Arguments'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='Arguments.html'>Arguments</a></td>
+        					<td><a href='/Arguments'>Arguments</a></td>
         					<td>This class can hold arguments for a function or method call.</td>
         				</tr>
         				<tr id='Callable'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='Callable.html'>Callable</a></td>
+        					<td><a href='/Callable'>Callable</a></td>
         					<td>Reflection base class for callable objects.</td>
         				</tr>
         				<tr id='CReflection'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='CReflection.html'>CReflection</a></td>
+        					<td><a href='/CReflection'>CReflection</a></td>
         					<td>Reflection global used for generial purpose needs.</td>
         				</tr>
         				<tr id='Function'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='Function.html'>Function</a></td>
+        					<td><a href='/Function'>Function</a></td>
         					<td>Reflection function class. Can be used to call global functions.</td>
         				</tr>
         				<tr id='IReflectionGroup'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='IReflectionGroup.html'>IReflectionGroup</a></td>
+        					<td><a href='/IReflectionGroup'>IReflectionGroup</a></td>
         					<td>Reflection group. Represents a group of reflectable objects.</td>
         				</tr>
         				<tr id='Method'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='Method.html'>Method</a></td>
+        					<td><a href='/Method'>Method</a></td>
         					<td>Reflection method class. Can be used to call object methods.</td>
         				</tr>
         				<tr id='ObjectType'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='ObjectType.html'>ObjectType</a></td>
+        					<td><a href='/ObjectType'>ObjectType</a></td>
         					<td>Represents an object type</td>
         				</tr>
         				<tr id='ReturnValue'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='ReturnValue.html'>ReturnValue</a></td>
+        					<td><a href='/ReturnValue'>ReturnValue</a></td>
         					<td>Reflection return value.</td>
         				</tr>
         	</tbody>
@@ -82,7 +82,7 @@
         	<tbody>
         				<tr id='ArgumentType'>
         					<td><a href='/Namespace.Reflection'>Reflection</a></td>
-        					<td><a href='ArgumentType.html'>ArgumentType</a></td>
+        					<td><a href='/ArgumentType'>ArgumentType</a></td>
         					<td>Which type a reflection argument is</td>
         				</tr>
         	</tbody>
