--- a/ObjectType.html
+++ b/ObjectType.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>ObjectType</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Reflection.html">Reflection</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Reflection">Reflection</a></p>
       <p>Represents an object type</p>
       <p><b>Type:</b> Reference</p>
         <h2 id="Methods">Methods</h2>
