--- a/SeekFile.html
+++ b/SeekFile.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>SeekFile</h1>
-      <p><b>Namespace:</b> <a href="Namespace.SeekFile.html">SeekFile</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.SeekFile">SeekFile</a></p>
       <p>Mode flags passed to <a href='/File#Seek'>File::Seek</a>.</p>
         <h2 id="Values">Values</h2>
         <table>
