--- a/SubMatch.html
+++ b/SubMatch.html
@@ -18,7 +18,7 @@
 	</header>
     <main>
       <h1>SubMatch</h1>
-      <p><b>Namespace:</b> <a href="Namespace.Regex.html">Regex</a></p>
+      <p><b>Namespace:</b> <a href="/Namespace.Regex">Regex</a></p>
       <p>Regular expression submatch</p>
       <p><b>Type:</b> Value</p>
         <h2 id="Methods">Methods</h2>
