--- a/CTextMenu.html
+++ b/CTextMenu.html
@@ -78,7 +78,7 @@
         					<td>Sets the title.</td>
         				</tr>
         				<tr id='AddItem'>
-        					<td><span class="type">void</span> AddItem( <span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, any<span class="type">@</span> pUserData = null)</td>
+        					<td><span class="type">void</span> AddItem( <span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, <span class="type">any</span><span class="type">@</span> pUserData = null)</td>
         					<td>Adds an item to the menu.</td>
         				</tr>
         	</tbody>
