--- a/CTextMenuItem.html
+++ b/CTextMenuItem.html
@@ -34,7 +34,7 @@
         					<td>Item name. Used for display.</td>
         				</tr>
         				<tr id='m_pUserData'>
-        					<td>any<span class="type">@</span> m_pUserData</td>
+        					<td><span class="type">any</span><span class="type">@</span> m_pUserData</td>
         					<td>User data. For internal use.</td>
         				</tr>
         	</tbody>
