--- a/ReturnValue.html
+++ b/ReturnValue.html
@@ -35,7 +35,7 @@
         					<td>Returns whether there is a return value or not.</td>
         				</tr>
         				<tr id='ToAny'>
-        					<td>any<span class="type">@</span> ToAny() <span class="type">const</span></td>
+        					<td><span class="type">any</span><span class="type">@</span> ToAny() <span class="type">const</span></td>
         					<td>Returns the return value as an any instance, if there was a return value.</td>
         				</tr>
         	</tbody>
