--- a/Vote.html
+++ b/Vote.html
@@ -74,11 +74,11 @@
         					<td>Starts this vote.</td>
         				</tr>
         				<tr id='GetUserData'>
-        					<td>any<span class="type">@</span> GetUserData()</td>
+        					<td><span class="type">any</span><span class="type">@</span> GetUserData()</td>
         					<td>Gets the user data set on this vote.</td>
         				</tr>
         				<tr id='SetUserData'>
-        					<td><span class="type">void</span> SetUserData(any<span class="type">@</span> pUserData)</td>
+        					<td><span class="type">void</span> SetUserData(<span class="type">any</span><span class="type">@</span> pUserData)</td>
         					<td>Sets the user data on this vote.</td>
         				</tr>
         				<tr id='ClearUserData'>
