--- a/index.html
+++ b/index.html
@@ -33,21 +33,17 @@
       </ul>
       <h2>Info</h2>
       <ul>
-      	<li>Sven Co-op 5.25</li>
-      	<li>AngelScript 1.25</li>
-      	<li>Docs revision 2</li>
+      	<li>Sven Co-op: 5.25</li>
+      	<li>SC API version: 1.25</li>
+      	<li>Docs revision: 2</li>
       </ul>
-      <h2>More Resources</h2>
+      <h2>More</h2>
       <ul>
-      	<li><a href='https://baso88.github.io/SC_AngelScript/docs/'>baso88's
-      			documentation</a></li>
-      	<li><a href='https://github.com/baso88/SC_AngelScript/wiki/'>baso88's GitHub
-      			Wiki</a></li>
-      	<li><a href='https://anggaranothing.gitlab.io/as/svencoop/'>anggaranothing's
-      			documentation</a></li>
-      	<li><a
-      			href='https://www.angelcode.com/angelscript/sdk/docs/manual/index.html'
-      		>Angelscript documentation</a></li>
+      	<li><a href='https://github.com/sven-coop/sven-coop.github.io'>source</a></li>
+      	<li><a href='https://baso88.github.io/SC_AngelScript/docs/'>baso88's documentation</a></li>
+      	<li><a href='https://github.com/baso88/SC_AngelScript/wiki/'>baso88's GitHubWiki</a></li>
+      	<li><a href='https://anggaranothing.gitlab.io/as/svencoop/'>anggaranothing's documentation</a></li>
+      	<li><ahref='https://www.angelcode.com/angelscript/sdk/docs/manual/index.html'>Angelscript documentation</a></li>
       </ul>    </main>
 	<script type="module" src="script.mjs" async defer></script>
   </body>
