--- a/Classes.html
+++ b/Classes.html
@@ -23,7 +23,7 @@
         <table>
         	<thead>
         		<tr>
-        				<th>Namepspace</th>
+        				<th>Namespace</th>
         				<th>Name</th>
         				<th>Description</th>
         		</tr>
