--- a/Interfaces.html
+++ b/Interfaces.html
@@ -31,9 +31,37 @@
         					<td><a href='/PlayerInVolumeListener'>PlayerInVolumeListener</a></td>
         					<td>Listener for CountPlayersInBrushVolume.</td>
         				</tr>
+        				<tr id='ScriptBaseAnimating'>
+        					<td><a href='/ScriptBaseAnimating'>ScriptBaseAnimating</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBaseItemEntity'>
+        					<td><a href='/ScriptBaseItemEntity'>ScriptBaseItemEntity</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBaseMonsterEntity'>
+        					<td><a href='/ScriptBaseMonsterEntity'>ScriptBaseMonsterEntity</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerAmmoEntity'>
+        					<td><a href='/ScriptBasePlayerAmmoEntity'>ScriptBasePlayerAmmoEntity</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerItemEntity'>
+        					<td><a href='/ScriptBasePlayerItemEntity'>ScriptBasePlayerItemEntity</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerWeaponEntity'>
+        					<td><a href='/ScriptBasePlayerWeaponEntity'>ScriptBasePlayerWeaponEntity</a></td>
+        					<td></td>
+        				</tr>
+        				<tr id='ScriptBaseTankEntity'>
+        					<td><a href='/ScriptBaseTankEntity'>ScriptBaseTankEntity</a></td>
+        					<td></td>
+        				</tr>
         				<tr id='ScriptClassInterface'>
         					<td><a href='/ScriptClassInterface'>ScriptClassInterface</a></td>
-        					<td>Script class interface</td>
+        					<td></td>
         				</tr>
         	</tbody>
         </table>    </main>
