--- a/string.html
+++ b/string.html
@@ -246,7 +246,7 @@
         					<td>Returns a copy of this <a href='/string'>string</a> with the given character appended.</td>
         				</tr>
         				<tr id='Split'>
-        					<td>array<string><span class="type">@</span> Split(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szDelimiter) <span class="type">const</span></td>
+        					<td><span class="type">array</span><span class="type"><</span><a class="type" href='/string'>string</a><span class="type">></span><span class="type">@</span> Split(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szDelimiter) <span class="type">const</span></td>
         					<td>Splits this <a href='/string'>string</a> by the given delimiter.</td>
         				</tr>
         	</tbody>
