--- a/CBaseMonster.html
+++ b/CBaseMonster.html
@@ -106,7 +106,7 @@
         					<td>Find sound replacement for the given file.</td>
         				</tr>
         				<tr id='FindMonstersInWorld'>
-        					<td><span class="type">int</span> FindMonstersInWorld(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">int</span> flagMask)</td>
+        					<td><span class="type">int</span> FindMonstersInWorld(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">int</span> flagMask)</td>
         					<td>Finds monsters in the world</td>
         				</tr>
         				<tr id='IsPlayerAlly'>
@@ -750,7 +750,7 @@
         					<td>Moves to the next scheduled task.</td>
         				</tr>
         				<tr id='ScheduleInList'>
-        					<td><a class="type" href='/Schedule'>Schedule</a><span class="type">@</span> ScheduleInList(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, array<Schedule<span class="type">@</span>><span class="type">@</span> pArray)</td>
+        					<td><a class="type" href='/Schedule'>Schedule</a><span class="type">@</span> ScheduleInList(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, <span class="type">array</span><span class="type"><</span><a class="type" href='/Schedule'>Schedule</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray)</td>
         					<td>Returns the schedule with name szName if it's in the list, NULL otherwise.</td>
         				</tr>
         				<tr id='ScheduleFromName'>
