--- a/CBaseToggle.html
+++ b/CBaseToggle.html
@@ -102,7 +102,7 @@
         					<td>Find sound replacement for the given file.</td>
         				</tr>
         				<tr id='FindMonstersInWorld'>
-        					<td><span class="type">int</span> FindMonstersInWorld(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">int</span> flagMask)</td>
+        					<td><span class="type">int</span> FindMonstersInWorld(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">int</span> flagMask)</td>
         					<td>Finds monsters in the world</td>
         				</tr>
         				<tr id='IsPlayerAlly'>
