--- a/CClassicMode.html
+++ b/CClassicMode.html
@@ -66,7 +66,7 @@
         					<td>Sets whether the map should restart if Classic Mode is changed.</td>
         				</tr>
         				<tr id='SetItemMappings'>
-        					<td><span class="type">void</span> SetItemMappings(array<ItemMapping<span class="type">@</span>><span class="type">@</span> pItemMappings)</td>
+        					<td><span class="type">void</span> SetItemMappings(<span class="type">array</span><span class="type"><</span><a class="type" href='/ItemMapping'>ItemMapping</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pItemMappings)</td>
         					<td>Sets the item mappings to use from now on.<br>Does not affect previous mappings.<br>Pass null to disable all mappings.</td>
         				</tr>
         				<tr id='FindItemMapping'>
