--- a/CEntityFuncs.html
+++ b/CEntityFuncs.html
@@ -134,19 +134,19 @@
         					<td>Finds an entity by target name in a sphere</td>
         				</tr>
         				<tr id='MonstersInSphere'>
-        					<td><span class="type">int</span> MonstersInSphere(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> vecCenter, <span class="type">float</span> flRadius)</td>
+        					<td><span class="type">int</span> MonstersInSphere(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> vecCenter, <span class="type">float</span> flRadius)</td>
         					<td>Finds monsters in a sphere</td>
         				</tr>
         				<tr id='EntitiesInBox'>
-        					<td><span class="type">int</span> EntitiesInBox(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs, <span class="type">int</span> flagMask)</td>
+        					<td><span class="type">int</span> EntitiesInBox(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs, <span class="type">int</span> flagMask)</td>
         					<td>Finds entities in a box</td>
         				</tr>
         				<tr id='TargetsInBox'>
-        					<td><span class="type">int</span> TargetsInBox(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs)</td>
+        					<td><span class="type">int</span> TargetsInBox(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs)</td>
         					<td>Finds targets in a box</td>
         				</tr>
         				<tr id='BrushEntsInBox'>
-        					<td><span class="type">int</span> BrushEntsInBox(array<CBaseEntity<span class="type">@</span>><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs )</td>
+        					<td><span class="type">int</span> BrushEntsInBox(<span class="type">array</span><span class="type"><</span><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pArray, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> mins, <span class="type">const</span> <a class="type" href='/Vector'>Vector</a><span class="type">&</span> <span class="inout">in</span> maxs )</td>
         					<td>Finds brush entities in a box</td>
         				</tr>
         				<tr id='DispatchSpawn'>
