--- a/CMapCycle.html
+++ b/CMapCycle.html
@@ -30,7 +30,7 @@
         	</thead>
         	<tbody>
         				<tr id='GetMapCycle'>
-        					<td>array<string><span class="type">@</span> GetMapCycle() <span class="type">const</span></td>
+        					<td><span class="type">array</span><span class="type"><</span><a class="type" href='/string'>string</a><span class="type">></span><span class="type">@</span> GetMapCycle() <span class="type">const</span></td>
         					<td>Gets the map cycle as an array of strings.</td>
         				</tr>
         				<tr id='Count'>
