--- a/CPersistence.html
+++ b/CPersistence.html
@@ -50,7 +50,7 @@
         					<td>Sets whether the previous map's persistence instances will be kept.</td>
         				</tr>
         				<tr id='KeepIfPrevious'>
-        					<td><span class="type">bool</span> KeepIfPrevious(<span class="type">const</span> array<string><span class="type">@</span> pArray)</td>
+        					<td><span class="type">bool</span> KeepIfPrevious(<span class="type">const</span> <span class="type">array</span><span class="type"><</span><a class="type" href='/string'>string</a><span class="type">></span><span class="type">@</span> pArray)</td>
         					<td>Will make the persistence manager keep the previous map's persistence instancesif the previous map's name matches any of the elements in the array.</td>
         				</tr>
         				<tr id='KeepIfPrevious@2'>
