--- a/CPluginManager.html
+++ b/CPluginManager.html
@@ -30,7 +30,7 @@
         	</thead>
         	<tbody>
         				<tr id='GetPluginList'>
-        					<td>array<string><span class="type">@</span> GetPluginList() <span class="type">const</span></td>
+        					<td><span class="type">array</span><span class="type"><</span><a class="type" href='/string'>string</a><span class="type">></span><span class="type">@</span> GetPluginList() <span class="type">const</span></td>
         					<td>Gets the list of plugins as strings.</td>
         				</tr>
         	</tbody>
