--- a/CTextMenu.html
+++ b/CTextMenu.html
@@ -30,7 +30,7 @@
         	</thead>
         	<tbody>
         				<tr id='CTextMenu'>
-        					<td><a class="type" href='/CTextMenu'>CTextMenu</a><span class="type">@</span> CTextMenu(TextMenuPlayerSlotCallback<span class="type">@</span> inputCB)</td>
+        					<td><a class="type" href='/CTextMenu'>CTextMenu</a><span class="type">@</span> CTextMenu(<a class="type" href='/Typedefs#TextMenuPlayerSlotCallback'>TextMenuPlayerSlotCallback</a><span class="type">@</span> inputCB)</td>
         					<td>Constructor. You must pass a player slot callback and handle the input yourself.</td>
         				</tr>
         				<tr id='get_Id'>
@@ -50,7 +50,7 @@
         					<td>Unregisters this text menu.</td>
         				</tr>
         				<tr id='Open'>
-        					<td><span class="type">void</span> Open(<span class="type">const</span> <span class="type">int</span> iDisplayTime, <span class="type">const</span> <span class="type">uint</span> page, array<edict_t<span class="type">@</span>><span class="type">@</span> pPlayers = null)</td>
+        					<td><span class="type">void</span> Open(<span class="type">const</span> <span class="type">int</span> iDisplayTime, <span class="type">const</span> <span class="type">uint</span> page, <span class="type">array</span><span class="type"><</span><a class="type" href='/edict_t'>edict_t</a><span class="type">@</span><span class="type">></span><span class="type">@</span> pPlayers = null)</td>
         					<td>Opens the menu and keeps it open for the given amount of time.<br>Time must be a positive value. Maximum 255 seconds. Pass 0 for infinite.<br>You can optionally pass a list of players that receive this menu.</td>
         				</tr>
         				<tr id='Open@2'>
