--- a/ScriptBaseAnimating.html
+++ b/ScriptBaseAnimating.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-		<title>ScriptClassInterface</title>
+		<title>ScriptBaseAnimating</title>
   </head>
   <body>
 	<header>
 		<nav>
-			<a href="/">Index</a> > <a href="/Interfaces">Interfaces</a> > <a href="/ScriptClassInterface">ScriptClassInterface</a>
+			<a href="/">Index</a> > <a href="/Interfaces">Interfaces</a> > <a href="/ScriptBaseAnimating">ScriptBaseAnimating</a>
 		</nav>
 		<div>
 			<input type="search" id="search-input" placeholder="Search">
@@ -17,7 +17,7 @@
 		</div>
 	</header>
     <main>
-      <h1>ScriptClassInterface</h1>
+      <h1>ScriptBaseAnimating</h1>
         <h2 id="Methods">Methods</h2>
         <table>
         	<thead>
@@ -70,7 +70,7 @@
         	</thead>
         	<tbody>
         				<tr id=''>
-        					<td><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span> self</td>
+        					<td><a class="type" href='/CBaseAnimating'>CBaseAnimating</a><span class="type">@</span> self</td>
         					<td></td>
         				</tr>
         				<tr id=''>
