--- a/ScriptBaseMonsterEntity.html
+++ b/ScriptBaseMonsterEntity.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-		<title>ScriptClassInterface</title>
+		<title>ScriptBaseMonsterEntity</title>
   </head>
   <body>
 	<header>
 		<nav>
-			<a href="/">Index</a> > <a href="/Interfaces">Interfaces</a> > <a href="/ScriptClassInterface">ScriptClassInterface</a>
+			<a href="/">Index</a> > <a href="/Interfaces">Interfaces</a> > <a href="/ScriptBaseMonsterEntity">ScriptBaseMonsterEntity</a>
 		</nav>
 		<div>
 			<input type="search" id="search-input" placeholder="Search">
@@ -17,7 +17,7 @@
 		</div>
 	</header>
     <main>
-      <h1>ScriptClassInterface</h1>
+      <h1>ScriptBaseMonsterEntity</h1>
         <h2 id="Methods">Methods</h2>
         <table>
         	<thead>
@@ -27,6 +27,10 @@
         		</tr>
         	</thead>
         	<tbody>
+        				<tr id='ScheduleFromName'>
+        					<td><a class="type" href='/Schedule'>Schedule</a><span class="type">@</span> ScheduleFromName(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName)</td>
+        					<td></td>
+        				</tr>
         				<tr id='SetUse'>
         					<td><span class="type">void</span> SetUse(<a class="type" href='/Typedefs#UseFunction'>UseFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
@@ -70,7 +74,7 @@
         	</thead>
         	<tbody>
         				<tr id=''>
-        					<td><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span> self</td>
+        					<td><a class="type" href='/CBaseMonster'>CBaseMonster</a><span class="type">@</span> self</td>
         					<td></td>
         				</tr>
         				<tr id=''>
@@ -78,11 +82,15 @@
         					<td></td>
         				</tr>
         				<tr id=''>
-        					<td><a class="type" href='/BaseEntity'>BaseEntity</a><span class="type">@</span> BaseClass</td>
+        					<td><a class="type" href='/BaseMonster'>BaseMonster</a><span class="type">@</span> BaseClass</td>
         					<td></td>
         				</tr>
         				<tr id=''>
         					<td><a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> callback</td>
+        					<td></td>
+        				</tr>
+        				<tr id=''>
+        					<td><span class="type">array</span><span class="type"><</span><a class="type" href='/ScriptSchedule'>ScriptSchedule</a><span class="type">@</span><span class="type">></span><span class="type">@</span> m_Schedules</td>
         					<td></td>
         				</tr>
         	</tbody>
