--- a/Vote.html
+++ b/Vote.html
@@ -62,11 +62,11 @@
         					<td>Sets the no button text.</td>
         				</tr>
         				<tr id='SetVoteBlockedCallback'>
-        					<td><span class="type">void</span> SetVoteBlockedCallback(VoteBlocked<span class="type">@</span> pCallback)</td>
+        					<td><span class="type">void</span> SetVoteBlockedCallback(<a class="type" href='/Typedefs#VoteBlocked'>VoteBlocked</a><span class="type">@</span> pCallback)</td>
         					<td>Sets the vote blocked callback.</td>
         				</tr>
         				<tr id='SetVoteEndCallback'>
-        					<td><span class="type">void</span> SetVoteEndCallback(VoteEnd<span class="type">@</span> pCallback)</td>
+        					<td><span class="type">void</span> SetVoteEndCallback(<a class="type" href='/Typedefs#VoteEnd'>VoteEnd</a><span class="type">@</span> pCallback)</td>
         					<td>Sets the vote end callback.</td>
         				</tr>
         				<tr id='Start'>
