--- a/Namespace.String.html
+++ b/Namespace.String.html
@@ -69,12 +69,12 @@
         				<tr id='INVALID_INDEX'>
         					<td><a href='/Namespace.String'>String</a></td>
         					<td><span class="type">const</span> <a class="type" href='/Typedefs#size_t'>size_t</a> INVALID_INDEX</td>
-        					<td>Sentinel value used by <a href='/string'>string</a> methods.</td>
+        					<td>Sentinel value used by <a href='/string'>string</a> methods.<br>Value: 4294967295</td>
         				</tr>
         				<tr id='NO_MORE_TOKENS'>
         					<td><a href='/Namespace.String'>String</a></td>
         					<td><span class="type">const</span> <a class="type" href='/Typedefs#size_t'>size_t</a> NO_MORE_TOKENS</td>
-        					<td>Sentinel value used by <a href='/string'>string</a> tokenization when there are no tokens remaining.</td>
+        					<td>Sentinel value used by <a href='/string'>string</a> tokenization when there are no tokens remaining.<br>Value: 4294967294</td>
         				</tr>
         	</tbody>
         </table>    </main>
