--- a/Namespace.Hooks.Weapon.html
+++ b/Namespace.Hooks.Weapon.html
@@ -38,17 +38,17 @@
         				<tr id='WeaponTertiaryAttack'>
         					<td><a href='/Namespace.Hooks.Weapon'>Hooks::Weapon</a></td>
         					<td><span class="type">const</span> <span class="type">uint32</span> WeaponTertiaryAttack</td>
-        					<td>Called when a player fires a weapon's tertiary attack.</td>
+        					<td>Called when a player fires a weapon's tertiary attack.<br>Value: 0</td>
         				</tr>
         				<tr id='WeaponSecondaryAttack'>
         					<td><a href='/Namespace.Hooks.Weapon'>Hooks::Weapon</a></td>
         					<td><span class="type">const</span> <span class="type">uint32</span> WeaponSecondaryAttack</td>
-        					<td>Called when a player fires a weapon's secondary attack.</td>
+        					<td>Called when a player fires a weapon's secondary attack.<br>Value: 1</td>
         				</tr>
         				<tr id='WeaponPrimaryAttack'>
         					<td><a href='/Namespace.Hooks.Weapon'>Hooks::Weapon</a></td>
         					<td><span class="type">const</span> <span class="type">uint32</span> WeaponPrimaryAttack</td>
-        					<td>Called when a player fires a weapon's primary attack.</td>
+        					<td>Called when a player fires a weapon's primary attack.<br>Value: 2</td>
         				</tr>
         	</tbody>
         </table>    </main>
