--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 		<meta name="description" content="Sven Co-op 5.25 AngelScript API documentation.">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="">
+		<meta property="og:title" content="Index">
 		<meta property="og:site_name" content="Sven Co-op AngelScript API">
 		<meta property="og:description" content="Sven Co-op 5.25 AngelScript API documentation.">
 		<meta property="og:image" content="https://raw.githubusercontent.com/sven-coop/sven-coop.github.io/main/src/sc.png">
