--- a/Classes.html
+++ b/Classes.html
@@ -590,6 +590,46 @@
         					<td><a href='/Schedule'>Schedule</a></td>
         					<td>Schedule for monsters to follow.</td>
         				</tr>
+        				<tr id='ScriptBaseAnimating'>
+        					<td></td>
+        					<td><a href='/ScriptBaseAnimating'>ScriptBaseAnimating</a></td>
+        					<td>Custom entity for <a href='/CBaseAnimating'>CBaseAnimating</a></td>
+        				</tr>
+        				<tr id='ScriptBaseEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBaseEntity'>ScriptBaseEntity</a></td>
+        					<td>Custom entity for <a href='/CBaseEntity'>CBaseEntity</a></td>
+        				</tr>
+        				<tr id='ScriptBaseItemEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBaseItemEntity'>ScriptBaseItemEntity</a></td>
+        					<td>Custom entity for <a href='/CItem'>CItem</a></td>
+        				</tr>
+        				<tr id='ScriptBaseMonsterEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBaseMonsterEntity'>ScriptBaseMonsterEntity</a></td>
+        					<td>Custom entity for <a href='/CBaseMonster'>CBaseMonster</a></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerAmmoEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBasePlayerAmmoEntity'>ScriptBasePlayerAmmoEntity</a></td>
+        					<td>Custom entity for <a href='/CBasePlayerAmmo'>CBasePlayerAmmo</a></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerItemEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBasePlayerItemEntity'>ScriptBasePlayerItemEntity</a></td>
+        					<td>Custom entity for <a href='/CBasePlayerItem'>CBasePlayerItem</a></td>
+        				</tr>
+        				<tr id='ScriptBasePlayerWeaponEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBasePlayerWeaponEntity'>ScriptBasePlayerWeaponEntity</a></td>
+        					<td>Custom entity for <a href='/CBasePlayerWeapon'>CBasePlayerWeapon</a></td>
+        				</tr>
+        				<tr id='ScriptBaseTankEntity'>
+        					<td></td>
+        					<td><a href='/ScriptBaseTankEntity'>ScriptBaseTankEntity</a></td>
+        					<td>Custom entity for <a href='/CBaseTank'>CBaseTank</a></td>
+        				</tr>
         				<tr id='ScriptSchedule'>
         					<td></td>
         					<td><a href='/ScriptSchedule'>ScriptSchedule</a></td>
