--- a/ScriptBaseEntity.html
+++ b/ScriptBaseEntity.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
 		<meta name="description" content="Sven Co-op 5.25 AngelScript API documentation.">
 		<meta property="og:type" content="website">
-		<meta property="og:title" content="ScriptBaseMonsterEntity">
+		<meta property="og:title" content="ScriptBaseEntity">
 		<meta property="og:site_name" content="Sven Co-op AngelScript API">
 		<meta property="og:description" content="Sven Co-op 5.25 AngelScript API documentation.">
 		<meta property="og:image" content="https://raw.githubusercontent.com/sven-coop/sven-coop.github.io/main/src/sc.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-		<title>ScriptBaseMonsterEntity</title>
+		<title>ScriptBaseEntity</title>
   </head>
   <body>
 	<header>
 		<nav>
-			<a href="/">Index</a> > <a href="/Classes">Classes</a> > <a href="/ScriptBaseMonsterEntity">ScriptBaseMonsterEntity</a>
+			<a href="/">Index</a> > <a href="/Classes">Classes</a> > <a href="/ScriptBaseEntity">ScriptBaseEntity</a>
 		</nav>
 		<div>
 			<input type="search" id="search-input" placeholder="Search">
@@ -23,8 +23,8 @@
 		</div>
 	</header>
     <main>
-      <h1>ScriptBaseMonsterEntity</h1>
-      <p>Custom entity for <a href='/CBaseMonster'>CBaseMonster</a></p>
+      <h1>ScriptBaseEntity</h1>
+      <p>Custom entity for <a href='/CBaseEntity'>CBaseEntity</a></p>
       <p><b>Type:</b> Value</p>
       <ul>
       	<li><a href="#Methods">Methods</a></li>
@@ -39,10 +39,6 @@
         		</tr>
         	</thead>
         	<tbody>
-        				<tr id='ScheduleFromName'>
-        					<td><a class="type" href='/Schedule'>Schedule</a><span class="type">@</span> ScheduleFromName(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName)</td>
-        					<td></td>
-        				</tr>
         				<tr id='SetUse'>
         					<td><span class="type">void</span> SetUse(<a class="type" href='/Typedefs#UseFunction'>UseFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
@@ -85,16 +81,12 @@
         		</tr>
         	</thead>
         	<tbody>
-        				<tr id='m_Schedules'>
-        					<td><span class="type">array</span><span class="type"><</span><a class="type" href='/ScriptSchedule'>ScriptSchedule</a><span class="type">@</span><span class="type">></span><span class="type">@</span> m_Schedules</td>
-        					<td></td>
-        				</tr>
         				<tr id='callback'>
         					<td><a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> callback</td>
         					<td></td>
         				</tr>
         				<tr id='BaseClass'>
-        					<td><a class="type" href='/BaseMonster'>BaseMonster</a><span class="type">@</span> BaseClass</td>
+        					<td><a class="type" href='/BaseEntity'>BaseEntity</a><span class="type">@</span> BaseClass</td>
         					<td></td>
         				</tr>
         				<tr id='pev'>
@@ -102,7 +94,7 @@
         					<td></td>
         				</tr>
         				<tr id='self'>
-        					<td><a class="type" href='/CBaseMonster'>CBaseMonster</a><span class="type">@</span> self</td>
+        					<td><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span> self</td>
         					<td></td>
         				</tr>
         	</tbody>
