--- a/ScriptBasePlayerAmmoEntity.html
+++ b/ScriptBasePlayerAmmoEntity.html
@@ -15,7 +15,7 @@
   <body>
 	<header>
 		<nav>
-			<a href="/">Index</a> > <a href="/Interfaces">Interfaces</a> > <a href="/ScriptBasePlayerAmmoEntity">ScriptBasePlayerAmmoEntity</a>
+			<a href="/">Index</a> > <a href="/Classes">Classes</a> > <a href="/ScriptBasePlayerAmmoEntity">ScriptBasePlayerAmmoEntity</a>
 		</nav>
 		<div>
 			<input type="search" id="search-input" placeholder="Search">
@@ -24,6 +24,12 @@
 	</header>
     <main>
       <h1>ScriptBasePlayerAmmoEntity</h1>
+      <p>Custom entity for <a href='/CBasePlayerAmmo'>CBasePlayerAmmo</a></p>
+      <p><b>Type:</b> Value</p>
+      <ul>
+      	<li><a href="#Methods">Methods</a></li>
+      	<li><a href="#Properties">Properties</a></li>
+      </ul>
         <h2 id="Methods">Methods</h2>
         <table>
         	<thead>
@@ -75,20 +81,20 @@
         		</tr>
         	</thead>
         	<tbody>
-        				<tr id=''>
-        					<td><a class="type" href='/CBasePlayerAmmo'>CBasePlayerAmmo</a><span class="type">@</span> self</td>
+        				<tr id='callback'>
+        					<td><a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> callback</td>
         					<td></td>
         				</tr>
-        				<tr id=''>
-        					<td><a class="type" href='/entvars_t'>entvars_t</a><span class="type">@</span> pev</td>
-        					<td></td>
-        				</tr>
-        				<tr id=''>
+        				<tr id='BaseClass'>
         					<td><a class="type" href='/BasePlayerAmmo'>BasePlayerAmmo</a><span class="type">@</span> BaseClass</td>
         					<td></td>
         				</tr>
-        				<tr id=''>
-        					<td><a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> callback</td>
+        				<tr id='pev'>
+        					<td><a class="type" href='/entvars_t'>entvars_t</a><span class="type">@</span> pev</td>
+        					<td></td>
+        				</tr>
+        				<tr id='self'>
+        					<td><a class="type" href='/CBasePlayerAmmo'>CBasePlayerAmmo</a><span class="type">@</span> self</td>
         					<td></td>
         				</tr>
         	</tbody>
