--- a/ScriptClassInterface.html
+++ b/ScriptClassInterface.html
@@ -24,75 +24,8 @@
 	</header>
     <main>
       <h1>ScriptClassInterface</h1>
-        <h2 id="Methods">Methods</h2>
-        <table>
-        	<thead>
-        		<tr>
-        				<th>Declaration</th>
-        				<th>Description</th>
-        		</tr>
-        	</thead>
-        	<tbody>
-        				<tr id='SetUse'>
-        					<td><span class="type">void</span> SetUse(<a class="type" href='/Typedefs#UseFunction'>UseFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetBlocked'>
-        					<td><span class="type">void</span> SetBlocked(<a class="type" href='/Typedefs#BlockedFunction'>BlockedFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetTouch'>
-        					<td><span class="type">void</span> SetTouch(<a class="type" href='/Typedefs#TouchFunction'>TouchFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetThink'>
-        					<td><span class="type">void</span> SetThink(<a class="type" href='/Typedefs#ThinkFunction'>ThinkFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetCallbackHandler'>
-        					<td><span class="type">void</span> SetCallbackHandler(<a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> pValue) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetBaseClass'>
-        					<td><span class="type">void</span> SetBaseClass(<a class="type" href='/BaseEntity'>BaseEntity</a><span class="type">@</span> pValue) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetPev'>
-        					<td><span class="type">void</span> SetPev(<a class="type" href='/entvars_t'>entvars_t</a><span class="type">@</span> pValue) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        				<tr id='SetSelf'>
-        					<td><span class="type">void</span> SetSelf(<a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span> pValue) <span class="type">final</span></td>
-        					<td></td>
-        				</tr>
-        	</tbody>
-        </table>  <h2 id="Properties">Properties</h2>
-        <table>
-        	<thead>
-        		<tr>
-        				<th>Declaration</th>
-        				<th>Description</th>
-        		</tr>
-        	</thead>
-        	<tbody>
-        				<tr id=''>
-        					<td><a class="type" href='/CBaseEntity'>CBaseEntity</a><span class="type">@</span> self</td>
-        					<td></td>
-        				</tr>
-        				<tr id=''>
-        					<td><a class="type" href='/entvars_t'>entvars_t</a><span class="type">@</span> pev</td>
-        					<td></td>
-        				</tr>
-        				<tr id=''>
-        					<td><a class="type" href='/BaseEntity'>BaseEntity</a><span class="type">@</span> BaseClass</td>
-        					<td></td>
-        				</tr>
-        				<tr id=''>
-        					<td><a class="type" href='/CustomEntityCallbackHandler'>CustomEntityCallbackHandler</a><span class="type">@</span> callback</td>
-        					<td></td>
-        				</tr>
-        	</tbody>
-        </table>    </main>
+      <p>Script class interface</p>
+    </main>
 	<script type="module" src="script.mjs" async defer></script>
   </body>
 </html>
