--- a/CTextMenu.html
+++ b/CTextMenu.html
@@ -36,7 +36,7 @@
         	</thead>
         	<tbody>
         				<tr id='CTextMenu'>
-        					<td><a class="type" href='/CTextMenu'>CTextMenu</a><span class="type">@</span> CTextMenu(<a class="type" href='/Typedefs#TextMenuPlayerSlotCallback'>TextMenuPlayerSlotCallback</a><span class="type">@</span> inputCB)</td>
+        					<td><a class="type" href='/CTextMenu'>CTextMenu</a><span class="type">@</span> CTextMenu(<a class="type" href='/FuncDefs#TextMenuPlayerSlotCallback'>TextMenuPlayerSlotCallback</a><span class="type">@</span> inputCB)</td>
         					<td>Constructor. You must pass a player slot callback and handle the input yourself.</td>
         				</tr>
         				<tr id='get_Id'>
