--- a/ScriptBaseMonsterEntity.html
+++ b/ScriptBaseMonsterEntity.html
@@ -44,19 +44,19 @@
         					<td></td>
         				</tr>
         				<tr id='SetUse'>
-        					<td><span class="type">void</span> SetUse(<a class="type" href='/Typedefs#UseFunction'>UseFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
+        					<td><span class="type">void</span> SetUse(<a class="type" href='/FuncDefs#UseFunction'>UseFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
         				</tr>
         				<tr id='SetBlocked'>
-        					<td><span class="type">void</span> SetBlocked(<a class="type" href='/Typedefs#BlockedFunction'>BlockedFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
+        					<td><span class="type">void</span> SetBlocked(<a class="type" href='/FuncDefs#BlockedFunction'>BlockedFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
         				</tr>
         				<tr id='SetTouch'>
-        					<td><span class="type">void</span> SetTouch(<a class="type" href='/Typedefs#TouchFunction'>TouchFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
+        					<td><span class="type">void</span> SetTouch(<a class="type" href='/FuncDefs#TouchFunction'>TouchFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
         				</tr>
         				<tr id='SetThink'>
-        					<td><span class="type">void</span> SetThink(<a class="type" href='/Typedefs#ThinkFunction'>ThinkFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
+        					<td><span class="type">void</span> SetThink(<a class="type" href='/FuncDefs#ThinkFunction'>ThinkFunction</a><span class="type">@</span> pFunction) <span class="type">final</span></td>
         					<td></td>
         				</tr>
         				<tr id='SetCallbackHandler'>
