--- a/CConCommand.html
+++ b/CConCommand.html
@@ -60,7 +60,7 @@
         					<td>Whether this command was added to the list of commands.<br>Must be added to be usable from the console.</td>
         				</tr>
         				<tr id='CConCommand'>
-        					<td><a class="type" href='/CConCommand'>CConCommand</a><span class="type">@</span> CConCommand(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, <span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szHelpInfo, <a class="type" href='/Typedefs#ConCommandCallback'>ConCommandCallback</a><span class="type">@</span> pCallback, <span class="type">const</span> <a class="type" href='/Typedefs#ConCommandFlags_t'>ConCommandFlags_t</a> flags = <a class="value" href='/ConCommandFlag#None'>ConCommandFlag::None</a>)</td>
+        					<td><a class="type" href='/CConCommand'>CConCommand</a><span class="type">@</span> CConCommand(<span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szName, <span class="type">const</span> <a class="type" href='/string'>string</a><span class="type">&</span> <span class="inout">in</span> szHelpInfo, <a class="type" href='/FuncDefs#ConCommandCallback'>ConCommandCallback</a><span class="type">@</span> pCallback, <span class="type">const</span> <a class="type" href='/Typedefs#ConCommandFlags_t'>ConCommandFlags_t</a> flags = <a class="value" href='/ConCommandFlag#None'>ConCommandFlag::None</a>)</td>
         					<td>Constructor</td>
         				</tr>
         	</tbody>
